turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
var c:Color=getCouleurSol()
var n:Int=0
var k:Char=''

 
for (i <- 0 to colors.length-1){
	
	if(c==colors(i)){return n}
	else{n=n+1}
	
	
}

if(n==rule.length-1){k=rule(0)}
else{k=rule(n)}

if(k=='R'){droite;avance}
if(k=='L'){gauche;avance}

if(n==colors.length-1){setCouleurBrosse(colors(0))}
else{setCouleurBrosse(colors(n+1))}

baisseBrosse();leveBrosse()    
n=0	
}
